--- a/src/Pages/payment.css
+++ b/src/Pages/payment.css
@@ -3,18 +3,21 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url('https://www.bhmpics.com/downloads/payment-Wallpapers/2.4597112.jpg'); 
+    background-size: cover; 
+    background-position: center; 
 }
 
-.card {
+.cardp {
     width: 300px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.9); 
     text-align: center;
 }
 
-.card h2 {
+.cardp h2 {
     margin-bottom: 20px;
     color: #333333;
 }
